--- a/README
+++ b/README
@@ -7,8 +7,6 @@ Student ID: S01271705
 - HW2-report.pdf		    	Homework report
 - ecmp.png
 - pp.png
-- sp1.png
-- sp2.png
 - HW2-2020.pdf              	Assignment document
 - code
 	- topology
@@ -30,7 +28,10 @@ Student ID: S01271705
 1. To run the program, do 'make' under comp436-hw2/code. 
 2. Once in Mininet, use xterm to open windows for h1 and h2. 
 3. In h2, do './receive.py' to run receiver program. 
-4. In h1, do './send.py 10.0.2.2' to send 100 flows with 20 packets for each 
-   flow. This command will use ECMP load balancing.
+4. In h1, do './send.py 10.0.2.2' to send 100 flows with 10-20 packets randomly 
+   for each flow. This command will use ECMP load balancing.
 5. To repeat the same task using per-packet load balancing, do 
    './send.py 10.0.2.2 -pp'.
+
+NOTE: before running either version of the sender, stop the receiver and restart 
+it first.
